src/objects/NC_Product__c.object
<CustomObject>
    <description>This is a Non Conformance - Product object.</description>
    <fields>
        <fullName>Defect_Count_Unique__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of unique defects.  This means that repeated defects across batch/lots are not counted more than once.</description>
        <inlineHelpText>Count of unique defects.  This means that repeated defects across batch/lots are not counted more than once.</inlineHelpText>
        <label>Defect_Count_Unique</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect_Count__c</fullName>
        <label>Defect Count</label>
        <summarizedField>Product_Lot_Numbers__c.Defect_Count__c</summarizedField>
        <summaryForeignKey>Product_Lot_Numbers__c.NC_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <label>Non-Conformance</label>
        <referenceTo>Non_Conformance__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <formula>Product__c = Non_Conformance__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NC Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCP{00000}</displayFormat>
        <label>NC Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Products: Product is required.</errorMessage>
    </validationRules>
</CustomObject>